{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 1447,
  "lineage": "52cae150-eb98-dff8-299f-89fc568d4ceb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PersonalSiteEC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:739275461129:instance/i-003538f87cc1e7928",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "PersonalSiteInstanceProfile",
            "id": "i-003538f87cc1e7928",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2KP",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08df520760b2066df",
            "private_dns": "ip-10-0-1-145.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.145",
            "public_ip": "52.90.202.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03162d52cf5b23f8b",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06dc771986c928286",
            "tags": {
              "Name": "PersonalSiteEC2Instance"
            },
            "tags_all": {
              "Name": "PersonalSiteEC2Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00a77bf4fddbe6acf"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.PersonalSiteInstanceProfile",
            "aws_security_group.allow_http_https_ssh",
            "aws_subnet.personal_site_subnet_1",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "personal_site_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275461129:internet-gateway/igw-08326ff23a30f0313",
            "id": "igw-08326ff23a30f0313",
            "owner_id": "739275461129",
            "tags": {
              "Name": "PersonalSiteInternetGateway"
            },
            "tags_all": {
              "Name": "PersonalSiteInternetGateway"
            },
            "vpc_id": "vpc-063cfd430dc2a052f"
          },
          "dependencies": [
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "personal_site_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:loadbalancer/app/personal-site-alb/ab22dfa2b784cc5e",
            "arn_suffix": "app/personal-site-alb/ab22dfa2b784cc5e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "personal-site-alb-167224884.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:739275461129:loadbalancer/app/personal-site-alb/ab22dfa2b784cc5e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "personal-site-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ab3e55d413a84472"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06dc771986c928286"
              },
              {
                "subnet_id": "subnet-07f103f71d7852441"
              }
            ],
            "subnets": [
              "subnet-06dc771986c928286",
              "subnet-07f103f71d7852441"
            ],
            "tags": {
              "Name": "PersonalSiteALB"
            },
            "tags_all": {
              "Name": "PersonalSiteALB"
            },
            "vpc_id": "vpc-063cfd430dc2a052f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_subnet.personal_site_subnet_1",
            "aws_subnet.personal_site_subnet_2",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:listener/app/personal-site-alb/ab22dfa2b784cc5e/5f04e8eb57e6826f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:739275461129:listener/app/personal-site-alb/ab22dfa2b784cc5e/5f04e8eb57e6826f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:loadbalancer/app/personal-site-alb/ab22dfa2b784cc5e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.personal_site_alb",
            "aws_security_group.alb_security_group",
            "aws_subnet.personal_site_subnet_1",
            "aws_subnet.personal_site_subnet_2",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:listener/app/personal-site-alb/ab22dfa2b784cc5e/ed71b47902c31b77",
            "certificate_arn": "arn:aws:acm:us-east-1:739275461129:certificate/df581d38-1391-4350-b624-baa07a645da8",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:739275461129:listener/app/personal-site-alb/ab22dfa2b784cc5e/ed71b47902c31b77",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:loadbalancer/app/personal-site-alb/ab22dfa2b784cc5e",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.personal_site_alb",
            "aws_security_group.alb_security_group",
            "aws_subnet.personal_site_subnet_1",
            "aws_subnet.personal_site_subnet_2",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:targetgroup/personal-site-backend-tg/2c4beab24ca62dde",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:listener-rule/app/personal-site-alb/ab22dfa2b784cc5e/ed71b47902c31b77/21757e2aee5e7336",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "api.premsanity.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:739275461129:listener-rule/app/personal-site-alb/ab22dfa2b784cc5e/ed71b47902c31b77/21757e2aee5e7336",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:listener/app/personal-site-alb/ab22dfa2b784cc5e/ed71b47902c31b77",
            "priority": 20,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.personal_site_alb",
            "aws_lb_listener.https",
            "aws_lb_target_group.personal_site_backend_tg",
            "aws_security_group.alb_security_group",
            "aws_subnet.personal_site_subnet_1",
            "aws_subnet.personal_site_subnet_2",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "frontend_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:targetgroup/personal-site-frontend-tg/71ccc88e4dc7c7d7",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:listener-rule/app/personal-site-alb/ab22dfa2b784cc5e/ed71b47902c31b77/8b1b53ae714800a7",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "premsanity.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:739275461129:listener-rule/app/personal-site-alb/ab22dfa2b784cc5e/ed71b47902c31b77/8b1b53ae714800a7",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:listener/app/personal-site-alb/ab22dfa2b784cc5e/ed71b47902c31b77",
            "priority": 10,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.personal_site_alb",
            "aws_lb_listener.https",
            "aws_lb_target_group.personal_site_frontend_tg",
            "aws_security_group.alb_security_group",
            "aws_subnet.personal_site_subnet_1",
            "aws_subnet.personal_site_subnet_2",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "personal_site_backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:targetgroup/personal-site-backend-tg/2c4beab24ca62dde",
            "arn_suffix": "targetgroup/personal-site-backend-tg/2c4beab24ca62dde",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:739275461129:targetgroup/personal-site-backend-tg/2c4beab24ca62dde",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "personal-site-backend-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-063cfd430dc2a052f"
          },
          "dependencies": [
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "personal_site_frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:targetgroup/personal-site-frontend-tg/71ccc88e4dc7c7d7",
            "arn_suffix": "targetgroup/personal-site-frontend-tg/71ccc88e4dc7c7d7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:739275461129:targetgroup/personal-site-frontend-tg/71ccc88e4dc7c7d7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "personal-site-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-063cfd430dc2a052f"
          },
          "dependencies": [
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "backend_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:739275461129:targetgroup/personal-site-backend-tg/2c4beab24ca62dde-20250123172646146100000006",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:targetgroup/personal-site-backend-tg/2c4beab24ca62dde",
            "target_id": "i-003538f87cc1e7928"
          },
          "dependencies": [
            "aws_iam_instance_profile.PersonalSiteInstanceProfile",
            "aws_instance.PersonalSiteEC2",
            "aws_lb_target_group.personal_site_backend_tg",
            "aws_security_group.allow_http_https_ssh",
            "aws_subnet.personal_site_subnet_1",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "frontend_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:739275461129:targetgroup/personal-site-frontend-tg/71ccc88e4dc7c7d7-20250123172645948100000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:739275461129:targetgroup/personal-site-frontend-tg/71ccc88e4dc7c7d7",
            "target_id": "i-003538f87cc1e7928"
          },
          "dependencies": [
            "aws_iam_instance_profile.PersonalSiteInstanceProfile",
            "aws_instance.PersonalSiteEC2",
            "aws_lb_target_group.personal_site_frontend_tg",
            "aws_security_group.allow_http_https_ssh",
            "aws_subnet.personal_site_subnet_1",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "personal_site_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275461129:route-table/rtb-0442abe84814fc72b",
            "id": "rtb-0442abe84814fc72b",
            "owner_id": "739275461129",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08326ff23a30f0313",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PersonalSitePublicRouteTable"
            },
            "tags_all": {
              "Name": "PersonalSitePublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-063cfd430dc2a052f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.personal_site_igw",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "personal_site_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebb5efb53b5caa7b",
            "route_table_id": "rtb-0442abe84814fc72b",
            "subnet_id": "subnet-06dc771986c928286"
          },
          "dependencies": [
            "aws_internet_gateway.personal_site_igw",
            "aws_route_table.personal_site_public_rt",
            "aws_subnet.personal_site_subnet_1",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "personal_site_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd838c9032ccfc80",
            "route_table_id": "rtb-0442abe84814fc72b",
            "subnet_id": "subnet-07f103f71d7852441"
          },
          "dependencies": [
            "aws_internet_gateway.personal_site_igw",
            "aws_route_table.personal_site_public_rt",
            "aws_subnet.personal_site_subnet_2",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275461129:security-group/sg-0ab3e55d413a84472",
            "description": "Allow HTTP and HTTPS traffic from the internet to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab3e55d413a84472",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20250123172626916400000001",
            "name_prefix": "terraform-",
            "owner_id": "739275461129",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-063cfd430dc2a052f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_https_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275461129:security-group/sg-00a77bf4fddbe6acf",
            "description": "Allow traffic from ALB and SSH traffic from specific IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a77bf4fddbe6acf",
            "ingress": [
              {
                "cidr_blocks": [
                  "67.255.0.111/32"
                ],
                "description": "Allow SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250123172626916400000002",
            "name_prefix": "terraform-",
            "owner_id": "739275461129",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PersonalSite-EC2-SecurityGroup"
            },
            "tags_all": {
              "Name": "PersonalSite-EC2-SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-063cfd430dc2a052f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_backend_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow backend traffic from ALB on port 8080",
            "from_port": 8080,
            "id": "sgrule-667539394",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00a77bf4fddbe6acf",
            "security_group_rule_id": "sgr-0e7512416781a3e8d",
            "self": false,
            "source_security_group_id": "sg-0ab3e55d413a84472",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_security_group.allow_http_https_ssh",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTP traffic from ALB",
            "from_port": 80,
            "id": "sgrule-3931683087",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00a77bf4fddbe6acf",
            "security_group_rule_id": "sgr-0d40f885dc3ead35c",
            "self": false,
            "source_security_group_id": "sg-0ab3e55d413a84472",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_security_group.allow_http_https_ssh",
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "personal_site_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275461129:subnet/subnet-06dc771986c928286",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06dc771986c928286",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739275461129",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PersonalSiteSubnet1"
            },
            "tags_all": {
              "Name": "PersonalSiteSubnet1"
            },
            "vpc_id": "vpc-063cfd430dc2a052f"
          },
          "dependencies": [
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "personal_site_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275461129:subnet/subnet-07f103f71d7852441",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f103f71d7852441",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739275461129",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PersonalSiteSubnet2"
            },
            "tags_all": {
              "Name": "PersonalSiteSubnet2"
            },
            "vpc_id": "vpc-063cfd430dc2a052f"
          },
          "dependencies": [
            "aws_vpc.personal_site_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "personal_site_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275461129:vpc/vpc-063cfd430dc2a052f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ecd62efe081d4885",
            "default_route_table_id": "rtb-034fbf11e66e5ea4f",
            "default_security_group_id": "sg-001e309197640cbe4",
            "dhcp_options_id": "dopt-0bacdf14738a8726a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-063cfd430dc2a052f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-034fbf11e66e5ea4f",
            "owner_id": "739275461129",
            "tags": {
              "Name": "PersonalSiteVPC"
            },
            "tags_all": {
              "Name": "PersonalSiteVPC"
            }
          }
        }
      ]
    }
  ]
}